--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,6 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/squeek/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
-    - /bin/cp script.js $DEPLOYPATH
+    - /bin/cp -R index.html $DEPLOYPATH
+    - /bin/cp -R style.css $DEPLOYPATH
+    - /bin/cp -R script.js $DEPLOYPATH
